--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(images/main2.jpg);
+    background-image: url(images/main.jpg);
     background-size: cover;
 }
 
@@ -8,7 +8,7 @@ section {
     height:700px;
     background: bisque;
     margin:50px 80px;
-    border: 15px solid transparent;
+    border: 5px solid transparent;
     border-image: linear-gradient(to bottom, #d511b8 0%, #2c4dd5 50%, #1f6834 100%);
     border-image-slice:1;
     box-sizing: border-box;
@@ -22,15 +22,21 @@ section {
 }
 
 .image {
-    max-width:510px;
-    max-height: 365px;
+    max-width:500px;
+    max-height: 360px;
     border: 1px solid black;
-    padding: 5px;
+    padding: 3px;
 }
 
 .images-classes img {
     border: 2px solid green;
-    margin: 10px 10px;
+    margin: 5px;
+}
+
+.bottompart {
+    display: flex;
+    justify-content: center;
+    margin: 15px;
 }
 
 #btn {
@@ -39,8 +45,9 @@ section {
     border:3px solid #ffbb2f;
     border-radius: 90px;
     background: linear-gradient(to top, #ff6b36, #f1da36);
+    color:#000080;
     font-size: 22px;
-    transition: 1.5s;
+    transition: 0.5s;
     margin:auto;
     margin-top:50px;
     margin-bottom: 50px;
@@ -54,7 +61,7 @@ section {
 
 #btn:hover {
     box-shadow: 5px 5px #ffbb2f;
-    transition: 2s;
+    transition: 0.5s;
     cursor:pointer;
     max-width: 265px;
    height: 85px;
@@ -83,13 +90,14 @@ ul li {
     color:navajowhite;
     box-sizing: border-box;
     padding: 7px 7px;
-    transition: 3s;
+    transition: 2s;
 }
 
 ul li:hover {
     background: antiquewhite;
     box-shadow: 2px 2px;
-    transition: 1.5s;
+    transition: 1s;
+    color: #1f6834;
 }
 
 #saveimg {
@@ -107,87 +115,72 @@ ul li:hover {
 
 .fil1 {
     filter: brightness(40%);
-    border-radius: 25px;
-    transition: 3s;
+
 }
 
 .fil2 {
     filter: hue-rotate(180deg);
-    transition: 3s;
 
 }
 
 .fil3 {
     filter:saturate(170%);
-    transition: 3s;
+
 
 }
 .fil4 {
     filter: sepia(80%);
-    transition: 3s;
 
 }
 
 .fil5 {
     filter:opacity(20%);
-    transition: 3s;
 
 }
 
 .fil6 {
     filter:grayscale(50%);
-    transition: 3s;
+
 
 }
 .fil7 {
     filter:hue-rotate(120deg);
-    transition: 3s;
+
 
 }
 .fil8 {
     filter:invert(70%);
-    transition: 3s;
+
 
 }
 .fil9 {
     filter:saturate(320%);
-    transition: 3s;
+
 
 }
 .fil10 {
     filter:grayscale(30%);
-    border-radius: 80px;
-    transition: 3s;
 }
 .fil11 {
     filter:sepia(200%);
-    transition: 3s;
+
 
 }
 .fil12 {
     filter:hue-rotate(235deg);
-    border-radius:15px;
-    transition: 3s;
 }
 .fil13 {
     filter:drop-shadow(10px -3px 5px greenyellow);
-    border-radius: 50px;
-    transition: 3s;
-    border-radius:70px;
 }
 .fil14 {
     filter:invert(90%);
-    transition: 3s;
-    border-radius:20px;
+
 }
 .fil15 {
     filter:drop-shadow(-10px 20px 3px orange);
-    transition: 3s;
-    border-radius:90px;
+
 }
 .fil16 {
     filter:none;
-    border-radius:20px;
-    transition: 3s;
 
 }
