--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,8 @@ section {
 .images-classes img {
     border: 2px solid green;
     margin: 5px;
+    max-width: 490px;
+    max-height: 340px;
 }
 
 .bottompart {
@@ -112,6 +114,14 @@ ul li:hover {
     box-shadow: #ff6b36 3px 3px;
 }
 
+
+#area {
+    padding:5px;
+    box-sizing: border-box;
+    background: lavender;
+    color: navy;
+    font-weight: bold;
+}
 
 .fil1 {
     filter: brightness(40%);
